Resize the image and correct spacing

--- a/keyform/static/keyform/css/base.css
+++ b/keyform/static/keyform/css/base.css
@@ -6,11 +6,6 @@
     font-size: 2em;
 }
 
-.headerImage {
-    width: 85px;
-    height: 65px;
-}
-
 .title-bar ul {
     display: inline;
     vertical-align: middle;
